Added view and template for detailed blog post. And added CSS to adjust fonts, styles, and so on.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,13 @@
-<html>
-  <head>
-    <title>jmg's blog</title>
-  </head>
-  <body>
-    <div>
-      <p> <h2>Lorem ipsum dolor sit amet </h2></p>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+  {% for post in posts %}
+  <div class="post">
+    <div class="date">
+      {{ post.published_date }}
     </div>
-    <div>
-      <h2><a href="">Test</a></h2>
-      {% for post in posts %}
-	<div>
-	  <p>published: {{ post.published_date }}</p>
-	  <h1><a href="">{{ post.title }}</a></h1>
-	  <p>{{ post.text|linebreaksbr }}</p>
-	</div>
-      {% endfor %}
-    </div>
-  </body>
-<html>
+    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+    <p>{{ post.text|linebreaksbr }}</p>
+  </div>
+  {% endfor %}
+{% endblock content %}
